--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "repository": "https://github.com/realistschuckle/es6-walkthroughs.git",
   "devDependencies": {
     "connect": "~3.2.0",
+    "del": "^0.1.3",
+    "gulp": "^3.8.8",
+    "gulp-rename": "^1.2.0",
     "serve-static": "~1.6.3"
   }
 }
