--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
-    "gulp-traceur": "^0.13.0",
+    "gulp-traceur": "git+https://github.com/realistschuckle/gulp-traceur.git",
     "serve-static": "~1.6.3"
   }
 }
