--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "repository": "https://github.com/realistschuckle/es6-walkthroughs.git",
   "devDependencies": {
     "connect": "~3.2.0",
-    "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
     "gulp-traceur": "git+https://github.com/realistschuckle/gulp-traceur.git",
+    "handlebars": "^2.0.0",
+    "mkdirp": "^0.5.0",
     "serve-static": "~1.6.3"
   }
 }
