--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
     "gulp-traceur": "git+https://github.com/realistschuckle/gulp-traceur.git",
+    "gulp-webserver": "^0.8.4",
     "handlebars": "^2.0.0",
     "mkdirp": "^0.5.0",
     "serve-static": "~1.6.3"
